k8s/mongo-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"StatefulSet","metadata":{"annotations":{},"name":"mongodb-state","namespace":"mern-app"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"mongodb-app"}},"serviceName":"mongodb-svc","template":{"metadata":{"labels":{"app":"mongodb-app"}},"spec":{"containers":[{"image":"mongo:7","name":"mongodb-cont","ports":[{"containerPort":27017}],"volumeMounts":[{"mountPath":"/mnt/data/mongo","name":"mongo-pvc"}]}]}},"volumeClaimTemplates":[{"metadata":{"name":"mongo [...]
  creationTimestamp: "2026-06-23T09:11:31Z"
  generation: 1
  name: mongodb-state
  namespace: mern-app
  resourceVersion: "6500"
  uid: 87f55686-a5b3-48fb-9e30-2ec8f22fc80e
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  podManagementPolicy: OrderedReady
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: mongodb-app
  serviceName: mongodb-svc
  template:
    metadata:
      labels:
        app: mongodb-app
    spec:
      containers:
      - image: mongo:7
        imagePullPolicy: IfNotPresent
        name: mongodb-cont
        ports:
        - containerPort: 27017
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /mnt/data/mongo
          name: mongo-pvc
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  updateStrategy:
    rollingUpdate:
      partition: 0
    type: RollingUpdate
  volumeClaimTemplates:
  - apiVersion: v1
    kind: PersistentVolumeClaim
    metadata:
      name: mongo-pvc
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
      storageClassName: ""
      volumeMode: Filesystem
    status:
      phase: Pending
status:
  availableReplicas: 0
  collisionCount: 0
  currentReplicas: 1
  currentRevision: mongodb-state-698bdbc8b
  observedGeneration: 1
  replicas: 1
  updateRevision: mongodb-state-698bdbc8b
  updatedReplicas: 1
