k8s/mongodb-statefullset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb-state
  namespace: mern-app
spec:
  selector:
    matchLabels:
      app: mongodb-app
  serviceName: "mongodb-svc"
  replicas: 1
  template:
    metadata:
      labels:
        app: mongodb-app
    spec:
      containers:
        - name: mongodb-cont
          image: mongo:7
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-pvc
              mountPath: /mnt/data/db
  volumeClaimTemplates:
    - metadata:
        name: mongo-pvc
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: gp2
        resources:
          requests:
            storage: 1Gi
