k8s/backend-service.yml
kind: Service
apiVersion: v1
metadata:
  name: backend-service
  namespace: mern-app
spec:
  selector:
    app: backend-app
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
