k8s/mongodb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-svc
  namespace: mern-app
spec:
  selector:
    app: mongodb-app
  ports:
    - port: 27017
      targetPort: 27017
  clusterIP: None
