k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mern-ingress
  namespace: mern-app
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:

      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8000

      - path: /users
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8000

      - path: /products
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8000

      - path: /orders
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8000

      - path: /cart
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8000

      - path: /brands
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8000

      - path: /categories
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8000

      - path: /address
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8000

      - path: /reviews
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8000

      - path: /wishlist
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8000

      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
